--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,13 @@
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
+
+
+
+
 :root {
   --max-width: 1100px;
   --border-radius: 12px;
